Changed class names

--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Portfolio Work</title>
 </head>
 <body>
     <header>Portolio</header>
@@ -16,18 +16,21 @@
     </div>
     <section id="blog">
         <h1>MoMart</h1>
-        <article class="MFlexed">
-            <div class="MImage1"><img src="MoMartImage1.png" alt="MoMart Character cleaning up a mess"></div>
-            <div class="MImage2"><img src="MoMartImage2.png" alt="Momart Character talking to a customer"></div>
+        <article class="mflexed">
+            <div class="mimage-a">
+                <img src="MoMartImage1.png" alt="MoMart Character cleaning up a mess">
+            </div>
+            <div class="mimage-b">
+                <img src="MoMartImage2.png" alt="Momart Character talking to a customer">
+            </div>
         </article>
-        <p class="description">
-            
-        </p>
-
-        <h2>Pizzakei</h2>
-        <article class="PFlexed">
-            <div class="PImage1"><img src="PizzakeiImage1.png" alt="Image of beginning of the 1st level"></div>
-            <div class="PImage2"><img src="PizzakeiImage2.png" alt="Image of another section of the 1st level"></div>
+        <article class="pflexed">
+            <div class="pimage-a">
+                <img src="PizzakeiImage1.png" alt="Image of beginning of the 1st level">
+            </div>
+            <div class="pimage-b">
+                <img src="PizzakeiImage2.png" alt="Image of another section of the 1st level">
+            </div>
         </article>
     </section>
 </body>
