Test if site works

--- a/portfolio.html
+++ b/portfolio.html
@@ -7,6 +7,45 @@
     <title>Portfolio Work</title>
 </head>
 <body>
-
+    <header>Portolio</header>
+    <p class="LinkTitle">
+        Other Links
+    </p>
+    <div> 
+        <a href="./resume.html">Resume</a>
+    </div>
+    <section id="blog">
+        <h1>MoMart</h1>
+        <article class="mflexed">
+            <div class="mimage-a">
+                <img src="MoMartImage1.png" alt="MoMart Character cleaning up a mess">
+            </div>
+            <div class="mimage-b">
+                <img src="MoMartImage2.png" alt="Momart Character talking to a customer">
+            </div>
+        </article>
+        <article class ="description">
+            <p class ="contact">
+                This was the first game that I developed as part of the MI 445 Game Design Minor class, where you play as an
+                average day retail worker employed at MoMart who is secretly a monster just trying to get by. For this game I 
+                designed and created the MoMart store and layout that the player is in. I really wanted to make sure that the 
+                level gave the player the feeling that they were walking around a retail store, however I didn't want the player 
+                to feel bored by this either. As a result I designed the layout of the store to be able to have a variety of 
+                different aisles with different items, as well as make sure the player wasn't only walking in a straight line to 
+                and from the objectives as that is not a fun experience. One other thing we created to make sure MoMart did not become
+                monotoneus were NPC customers, each with their own minigame they let you play. Everyone helped with the process of making
+                sure they felt fun and enjoyable which resulted in good breaks between the different tasks.
+            </p>
+            <link>
+        </article>
+        <article class="pflexed">
+            <div class="pimage-a">
+                <img src="PizzakeiImage1.png" alt="Image of beginning of the 1st level">
+            </div>
+            <div class="pimage-b">
+                <img src="PizzakeiImage2.png" alt="Image of another section of the 1st level">
+            </div>
+        </article>
+    </section>
 </body>
 </html>
