Testing style sheet

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Portfolio Work</title>
 </head>
 <body>
@@ -16,11 +17,11 @@
     </div>
     <section id="blog">
         <h1>MoMart</h1>
-        <article class="mflexed">
-            <div class="mimage-a">
+        <article class="flexed">
+            <div class="image-a">
                 <img src="MoMartImage1.png" alt="MoMart Character cleaning up a mess">
             </div>
-            <div class="mimage-b">
+            <div class="image-b">
                 <img src="MoMartImage2.png" alt="Momart Character talking to a customer">
             </div>
         </article>
@@ -38,11 +39,11 @@
             </p>
             <link>
         </article>
-        <article class="pflexed">
-            <div class="pimage-a">
+        <article class="flexed">
+            <div class="image-a">
                 <img src="PizzakeiImage1.png" alt="Image of beginning of the 1st level">
             </div>
-            <div class="pimage-b">
+            <div class="image-b">
                 <img src="PizzakeiImage2.png" alt="Image of another section of the 1st level">
             </div>
         </article>
