--- a/index.html
+++ b/index.html
@@ -17,14 +17,18 @@
     </div>
     <section id="blog">
         <h1>MoMart</h1>
-        <article class="flexed">
+    <section class = "flexed">
+        <article class="format-f">
             <div class="image-a">
                 <img src="MoMartImage1.png" alt="MoMart Character cleaning up a mess">
             </div>
+        </article>
+        <article class="format-f">
             <div class="image-b">
                 <img src="MoMartImage2.png" alt="Momart Character talking to a customer">
             </div>
         </article>
+    </section>
         <article class ="description">
             <p class ="contact">
                 This was the first game that I developed as part of the MI 445 Game Design Minor class, where you play as an
@@ -39,14 +43,16 @@
             </p>
             <link>
         </article>
-        <article class="flexed">
-            <div class="image-a">
+    <section class = "flexed">
+        <article class="format-f">
+            <div class="image">
                 <img src="PizzakeiImage1.png" alt="Image of beginning of the 1st level">
             </div>
             <div class="image-b">
                 <img src="PizzakeiImage2.png" alt="Image of another section of the 1st level">
             </div>
         </article>
+    </section>
     </section>
 </body>
 </html>
