Changed format again

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </article>
     <section class = "flexed">
         <article class="format-f">
-            <div class="image">
+            <div class="image-a">
                 <img src="PizzakeiImage1.png" alt="Image of beginning of the 1st level">
             </div>
             <div class="image-b">
