--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
             <div class="image-a">
                 <img src="PizzakeiImage1.png" alt="Image of beginning of the 1st level">
             </div>
+        </article>
+        <article class="format-f"></article>
             <div class="image-b">
                 <img src="PizzakeiImage2.png" alt="Image of another section of the 1st level">
             </div>
