--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <img src="PizzakeiImage1.png" alt="Image of beginning of the 1st level">
             </div>
         </article>
-        <article class="format-f"></article>
+        <article class="format-f">
             <div class="image-b">
                 <img src="PizzakeiImage2.png" alt="Image of another section of the 1st level">
             </div>
