Added title format

--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
     <title>Portfolio Work</title>
 </head>
 <body>
-    <header>Portolio</header>
-    <p class="LinkTitle">
-        Other Links
-    </p>
-    <div> 
-        <a href="./resume.html">Resume</a>
-    </div>
+    <section class="top">
+        <header>Portolio</header>
+            <p class="LinkTitle">
+            Other Links
+            </p>
+        <div class="links"> 
+            <a href="./resume.html">Resume</a>
+        </div>
+    </section>
     <section id="blog">
         <h1>MoMart</h1>
     <section class = "flexed">
@@ -55,6 +57,11 @@
             </div>
         </article>
     </section>
+        <article class ="description">
+            <p class ="contact">
+                This is the second game that I am currently developing for my MI 445 class.
+            </p>
+        </article>
     </section>
 </body>
 </html>
