--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <section class="top">
-        <header>Portolio</header>
-            <p class="LinkTitle">
+        <header class="header">Portolio</header>
+            <p class="header">
             Other Links
             </p>
         <div class="links"> 
