--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <section class="top">
         <header class="header">Portolio</header>
-            <p class="header">
+            <p class="headera">
             Other Links
             </p>
         <div class="links"> 
