--- a/resume.html
+++ b/resume.html
@@ -7,6 +7,14 @@
     <title>Previous Jobs and Internships</title>
 </head>
 <body>
-
+    <section class="top">
+        <header class="header">Resume</header>
+            <p class="headera">
+            Other Links
+            </p>
+        <div class="links"> 
+            <a href="./portfolio.html">Portfolio</a>
+        </div>
+    </section>
 </body>
 </html>
