--- a/resume.html
+++ b/resume.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Previous Jobs and Internships</title>
 </head>
 <body>
@@ -13,7 +14,7 @@
             Other Links
             </p>
         <div class="links"> 
-            <a href="./portfolio.html">Portfolio</a>
+            <a href="./index.html">Portfolio</a>
         </div>
     </section>
 </body>
