--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
     </section>
     <section id="blog">
-        <h1>MoMart</h1>
+        <h1 class = "title">MoMart</h1>
     <section class = "flexed">
         <article class="format-f">
             <div class="image-a">
@@ -45,6 +45,8 @@
             </p>
             <link>
         </article>
+        <h2 class="title">Pizzakei</h2>
+        <a href=""
     <section class = "flexed">
         <article class="format-f">
             <div class="image-a">
@@ -59,7 +61,13 @@
     </section>
         <article class ="description">
             <p class ="contact">
-                This is the second game that I am currently developing for my MI 445 class.
+                This is the second game that I am currently developing for my MI 445 class. In Pizzakei, the player plays as a man 
+                who has recently passed away but has been reincarnated as a sentient pizza mobster sent on a quest to take down the 
+                H.U.T. crime family. It is a 2D Metroidvania shooter game. My contributions to the game so far has been setting up 
+                the animations, creaating the sounds, and the biggest contribution has been the level design which can be seen in the 
+                two pictures above. My thought process for the levels were to make them fun to explore and move around as I knew the player
+                was going to be moving between the different areas often. I also wanted to make sure that the combat was fun which is why
+                I was very careful in how I placed the enemies.
             </p>
         </article>
     </section>
