--- a/index.html
+++ b/index.html
@@ -43,10 +43,9 @@
                 monotoneus were NPC customers, each with their own minigame they let you play. Everyone helped with the process of making
                 sure they felt fun and enjoyable which resulted in good breaks between the different tasks.
             </p>
-            <link>
         </article>
+        <a href="https://connor-miller.itch.io/">Check out my games!</a>
         <h2 class="title">Pizzakei</h2>
-        <a href=""
     <section class = "flexed">
         <article class="format-f">
             <div class="image-a">
@@ -70,6 +69,7 @@
                 I was very careful in how I placed the enemies.
             </p>
         </article>
+        <a href="https://connor-miller.itch.io/">Check out my games!</a>
     </section>
 </body>
 </html>
