--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             </p>
         <div class="links"> 
             <a href="./resume.html">Resume</a>
+            <a href="./preproduction.html">Pre-Production Write Up</a>
         </div>
     </section>
     <section id="blog">
@@ -44,7 +45,7 @@
                 sure they felt fun and enjoyable which resulted in good breaks between the different tasks.
             </p>
         </article>
-        <a href="https://connor-miller.itch.io/">Check out my games!</a>
+        <a href="https://connor-miller.itch.io/momart-inc">Check out MoMart Inc.!</a>
         <h2 class="title">Pizzakei</h2>
     <section class = "flexed">
         <article class="format-f">
@@ -69,7 +70,7 @@
                 I was very careful in how I placed the enemies.
             </p>
         </article>
-        <a href="https://connor-miller.itch.io/">Check out my games!</a>
+        <a href="https://connor-miller.itch.io/">Check out my other games!</a>
     </section>
 </body>
 </html>
