--- a/preproduction.html
+++ b/preproduction.html
@@ -4,18 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Previous Jobs and Internships</title>
+    <title>Document</title>
 </head>
 <body>
     <section class="top">
-        <header class="header">Resume</header>
+        <header class="header">Pre-Production Write Up</header>
             <p class="headera">
             Other Links
             </p>
         <div class="links"> 
+            <a href="./resume.html">Resume</a>
             <a href="./index.html">Portfolio</a>
-            <a href="./preproduction.html">Pre-Production Write Up</a>
         </div>
     </section>
 </body>
