--- a/index.html
+++ b/index.html
@@ -72,5 +72,11 @@
         </article>
         <a href="https://connor-miller.itch.io/">Check out my other games!</a>
     </section>
+    <section class="bottom">
+        <header class="headera">Contact Me</header>
+            <p class="headerb">
+            connorcem415@gmail.com
+            </p>
+    </section>
 </body>
 </html>
