--- a/resume.html
+++ b/resume.html
@@ -18,5 +18,60 @@
             <a href="./index.html">Portfolio</a>
         </div>
     </section>
+    <section id="blog">
+        <h1 class = "title">Resume</h1>
+        <section class = "flexed">
+            <article class="format-r">
+                <h2 class="header-r">Game Design Skills</h2>
+                <ul>
+                    <li>Level Design</li>
+                    <li>Sound Design</li>
+                    <li>3D Art</li>
+                    <li>Setting up 2D and 3D Animations</li>
+                 </ul>
+            </article>
+            <article class="format-r">
+                <h3 class="header-r">Technology Skills</h3>
+                <ul>
+                    <li>Unity Game Engine</li>
+                    <li>Blender</li>
+                    <li>Microsoft Software</li>
+                    <li>Adobe Software</li>
+                 </ul>
+            </article>
+        </section>
+            <article class="description">
+                <h4 class="title">Fuse.AR</h4>
+                <p class="contact">
+                    For Fuse.AR I worked on various Instagram filters that were commissioned by different companies
+                    who wanted to have AR filters to advertise their product. Specifically I worked on making sure 
+                    that the filters had some kind of game element to them so that the user would enjoy playing them.
+                    I worked there from May 1st, 2022 until August 25th, 2022.
+                </p>
+            </article>
+            <article class="description">
+                <h5 class="title">Nifty Games</h5>
+                <p class="contact">
+                    For Nifty Games I worked on a variety of sports games, ranging from coming up and developing a paper prototype
+                    for an upcoming wrestling game they were developng to participating in QA for their mobile football game NFL Clash.
+                    I worked there from January 2019 until December 2021.
+                </p>
+            </article>
+            <article class="description">
+                <h6 class="title">iD Tech Camps</h6>
+                <p class="contact">
+                    At iD Tech Camps I worked as a summer camp instructor and taught campers about game and level design through out 
+                    the week. I would also help them use the game and level design skills I taught them to create different levels in
+                    Minecraft that the could show off and play with their friends at the end of the week. I worked at iD Tech Camps during 
+                    the summers of 2019, 2020, and 2021.
+                </p>
+            </article>
+    </section>
+    <section class="bottom">
+        <header class="headera">Contact Me</header>
+            <p class="headerb">
+            connorcem415@gmail.com
+            </p>
+    </section>
 </body>
 </html>
