--- a/resume.html
+++ b/resume.html
@@ -20,7 +20,7 @@
     </section>
     <section id="blog">
         <h1 class = "title">Resume</h1>
-        <section class = "flexed">
+        <section class = "flexed-c">
             <article class="format-r">
                 <h2 class="header-r">Game Design Skills</h2>
                 <ul>
@@ -40,32 +40,34 @@
                  </ul>
             </article>
         </section>
-            <article class="description">
+        <section class="flexed-c">
+            <article class="description-c">
                 <h4 class="title">Fuse.AR</h4>
-                <p class="contact">
+                <p class="contact-c">
                     For Fuse.AR I worked on various Instagram filters that were commissioned by different companies
                     who wanted to have AR filters to advertise their product. Specifically I worked on making sure 
                     that the filters had some kind of game element to them so that the user would enjoy playing them.
                     I worked there from May 1st, 2022 until August 25th, 2022.
                 </p>
             </article>
-            <article class="description">
+            <article class="description-c">
                 <h5 class="title">Nifty Games</h5>
-                <p class="contact">
+                <p class="contact-c">
                     For Nifty Games I worked on a variety of sports games, ranging from coming up and developing a paper prototype
                     for an upcoming wrestling game they were developng to participating in QA for their mobile football game NFL Clash.
                     I worked there from January 2019 until December 2021.
                 </p>
             </article>
-            <article class="description">
+            <article class="description-c">
                 <h6 class="title">iD Tech Camps</h6>
-                <p class="contact">
+                <p class="contact-c">
                     At iD Tech Camps I worked as a summer camp instructor and taught campers about game and level design through out 
                     the week. I would also help them use the game and level design skills I taught them to create different levels in
                     Minecraft that the could show off and play with their friends at the end of the week. I worked at iD Tech Camps during 
                     the summers of 2019, 2020, and 2021.
                 </p>
             </article>
+            </section>
     </section>
     <section class="bottom">
         <header class="headera">Contact Me</header>
