--- a/resume.html
+++ b/resume.html
@@ -42,7 +42,7 @@
         </section>
         <section class="flexed-c">
             <article class="description-c">
-                <h4 class="title">Fuse.AR</h4>
+                <h4 class="title-c">Fuse.AR</h4>
                 <p class="contact-c">
                     For Fuse.AR I worked on various Instagram filters that were commissioned by different companies
                     who wanted to have AR filters to advertise their product. Specifically I worked on making sure 
@@ -51,7 +51,7 @@
                 </p>
             </article>
             <article class="description-c">
-                <h5 class="title">Nifty Games</h5>
+                <h5 class="title-c">Nifty Games</h5>
                 <p class="contact-c">
                     For Nifty Games I worked on a variety of sports games, ranging from coming up and developing a paper prototype
                     for an upcoming wrestling game they were developng to participating in QA for their mobile football game NFL Clash.
@@ -59,7 +59,7 @@
                 </p>
             </article>
             <article class="description-c">
-                <h6 class="title">iD Tech Camps</h6>
+                <h6 class="title-c">iD Tech Camps</h6>
                 <p class="contact-c">
                     At iD Tech Camps I worked as a summer camp instructor and taught campers about game and level design through out 
                     the week. I would also help them use the game and level design skills I taught them to create different levels in
