--- a/resume.html
+++ b/resume.html
@@ -59,7 +59,7 @@
                 </p>
             </article>
             <article class="description-c">
-                <h6 class="title-c">iD Tech Camps</h6>
+                <h6 class="title-d">iD Tech Camps</h6>
                 <p class="contact-c">
                     At iD Tech Camps I worked as a summer camp instructor and taught campers about game and level design through out 
                     the week. I would also help them use the game and level design skills I taught them to create different levels in
