--- a/resume.html
+++ b/resume.html
@@ -54,7 +54,8 @@
                 <h5 class="title-c">Nifty Games</h5>
                 <p class="contact-c">
                     For Nifty Games I worked on a variety of sports games, ranging from coming up and developing a paper prototype
-                    for an upcoming wrestling game they were developng to participating in QA for their mobile football game NFL Clash.
+                    for an upcoming wrestling game they were developng to participating in QA for their mobile football game NFL Clash. 
+                    I also attending meeting where I got first hand experience on how a game company is run.
                     I worked there from January 2019 until December 2021.
                 </p>
             </article>
