--- a/resume.html
+++ b/resume.html
@@ -42,7 +42,7 @@
         </section>
         <section class="flexed-c">
             <article class="description-c">
-                <h4 class="title-c">Fuse.AR</h4>
+                <h4 class="title-e">Fuse.AR</h4>
                 <p class="contact-c">
                     For Fuse.AR I worked on various Instagram filters that were commissioned by different companies
                     who wanted to have AR filters to advertise their product. Specifically I worked on making sure 
