--- a/resume.html
+++ b/resume.html
@@ -14,7 +14,7 @@
             Other Links
             </p>
         <div class="links"> 
-            <a href="./preproduction.html">Pre-Production Write Up</a>
+            <a href="./preproduction.html" class ="prea">Pre-Production Write Up</a>
             <a href="./index.html">Portfolio</a>
         </div>
     </section>
