--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             Other Links
             </p>
         <div class="links"> 
-            <a href="./resume.html">Resume</a>
+            <a href="./resume.html" class="resumei">Resume</a>
             <a href="./preproduction.html">Pre-Production Write Up</a>
         </div>
     </section>
