--- a/preproduction.html
+++ b/preproduction.html
@@ -10,11 +10,11 @@
 <body>
     <section class="top">
         <header class="headere">Pre-Production Write Up</header>
-            <p class="headera">
+            <p class="headerg">
             Other Links
             </p>
         <div class="links"> 
-            <a href="./resume.html">Resume</a>
+            <a href="./resume.html" class="resumep">Resume</a>
             <a href="./index.html">Portfolio</a>
         </div>
     </section>
