--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             </p>
         <div class="links"> 
             <a href="./resume.html" class="resumei">Resume</a>
-            <a href="./preproduction.html">Pre-Production Write Up</a>
+            <a href="./preproduction.html" class="prei">Pre-Production Write Up</a>
         </div>
     </section>
     <section id="blog">
