--- a/resume.html
+++ b/resume.html
@@ -15,7 +15,7 @@
             </p>
         <div class="links"> 
             <a href="./preproduction.html" class ="prea">Pre-Production Write Up</a>
-            <a href="./index.html">Portfolio</a>
+            <a href="./index.html" class="portfolior">Portfolio</a>
         </div>
     </section>
     <section id="blog">
