--- a/resume.html
+++ b/resume.html
@@ -20,7 +20,7 @@
     </section>
     <section id="blog">
         <h1 class = "title">Resume</h1>
-        <section class = "flexed-c">
+        <section class = "flexed-d">
             <article class="format-r">
                 <h2 class="header-r">Game Design Skills</h2>
                 <ul>
