--- a/resume.html
+++ b/resume.html
@@ -23,7 +23,7 @@
         <section class = "flexed-d">
             <article class="format-r">
                 <h2 class="header-r">Game Design Skills</h2>
-                <ul>
+                <ul class="colorsize">
                     <li>Level Design</li>
                     <li>Sound Design</li>
                     <li>3D Art</li>
@@ -32,7 +32,7 @@
             </article>
             <article class="format-r">
                 <h3 class="header-r">Technology Skills</h3>
-                <ul>
+                <ul class="colorsize">
                     <li>Unity Game Engine</li>
                     <li>Blender</li>
                     <li>Microsoft Software</li>
