--- a/resume.html
+++ b/resume.html
@@ -40,6 +40,12 @@
                  </ul>
             </article>
         </section>
+        <h1 class = "title">Education</h1>
+        <article class ="description-r">
+            <p class ="contact">
+                Currently studying at Michigan State University, majoring and minoring in Game Design and Interactivity.
+            </p>
+        </article>
         <section class="flexed-c">
             <article class="description-c">
                 <h4 class="title-e">Fuse.AR</h4>
