--- a/resume.html
+++ b/resume.html
@@ -40,9 +40,9 @@
                  </ul>
             </article>
         </section>
-        <h1 class = "title">Education</h1>
+        <h1 class = "title-f">Education</h1>
         <article class ="description-r">
-            <p class ="contact">
+            <p class ="contact-e">
                 Currently studying at Michigan State University, majoring and minoring in Game Design and Interactivity.
             </p>
         </article>
