--- a/resume.html
+++ b/resume.html
@@ -19,7 +19,12 @@
         </div>
     </section>
     <section id="blog">
-        <h1 class = "title">Resume</h1>
+        <h1 class = "title-f">Education</h1>
+        <article class ="description-r">
+            <p class ="contact-e">
+                Currently studying at Michigan State University, majoring and minoring in Game Design and Interactivity.
+            </p>
+        <h1 class = "title">Skills</h1>
         <section class = "flexed-d">
             <article class="format-r">
                 <h2 class="header-r">Game Design Skills</h2>
@@ -40,12 +45,8 @@
                  </ul>
             </article>
         </section>
-        <h1 class = "title-f">Education</h1>
-        <article class ="description-r">
-            <p class ="contact-e">
-                Currently studying at Michigan State University, majoring and minoring in Game Design and Interactivity.
-            </p>
         </article>
+        <h1 class = "title">Work Experience</h1>
         <section class="flexed-c">
             <article class="description-c">
                 <h4 class="title-e">Fuse.AR</h4>
