--- a/resume.html
+++ b/resume.html
@@ -24,7 +24,7 @@
             <p class ="contact-e">
                 Currently studying at Michigan State University, majoring and minoring in Game Design and Interactivity.
             </p>
-        <h1 class = "title">Skills</h1>
+        <h2 class = "title">Skills</h2>
         <section class = "flexed-d">
             <article class="format-r">
                 <h2 class="header-r">Game Design Skills</h2>
@@ -46,7 +46,7 @@
             </article>
         </section>
         </article>
-        <h1 class = "title">Work Experience</h1>
+        <h1 class = "title-b">Work Experience</h1>
         <section class="flexed-c">
             <article class="description-c">
                 <h4 class="title-e">Fuse.AR</h4>
