--- a/resume.html
+++ b/resume.html
@@ -25,7 +25,7 @@
                 Currently studying at Michigan State University, majoring and minoring in Game Design and Interactivity.
             </p>
         </article>
-        <h2 class = "title">Skills</h2>
+        <h2 class = "title-a">Skills</h2>
         <section class = "flexed-d">
             <article class="format-r">
                 <h2 class="header-r">Game Design Skills</h2>
@@ -46,7 +46,7 @@
                  </ul>
             </article>
         </section>
-        <h1 class = "title-b">Work Experience</h1>
+        <h3 class = "title-b">Work Experience</h3>
         <section class="flexed-c">
             <article class="description-c">
                 <h4 class="title-e">Fuse.AR</h4>
