--- a/preproduction.html
+++ b/preproduction.html
@@ -18,5 +18,25 @@
             <a href="./index.html">Portfolio</a>
         </div>
     </section>
+    <article class="format-f">
+        <div class="image-a">
+            <img src="Pitchboard1.png" alt="First Pitchboard draft">
+        </div>
+    </article>
+    <article class="format-f">
+        <div class="image-a">
+            <img src="Pitchboard2.png" alt="Second Pitchboard draft">
+        </div>
+    </article>
+    <article class="format-f">
+        <div class="image-a">
+            <img src="Pitchboard3.png" alt="Portfolio Wireframe">
+        </div>
+    </article>
+    <article class="format-f">
+        <div class="image-a">
+            <img src="Pitchboard4.png" alt="Resume Wireframe">
+        </div>
+    </article>
 </body>
 </html>
