--- a/preproduction.html
+++ b/preproduction.html
@@ -18,23 +18,23 @@
             <a href="./index.html">Portfolio</a>
         </div>
     </section>
-    <article>
-        <div>
+    <article class="format-g">
+        <div class="image-c">
             <img src="Pitchboard1.png" alt="First Pitchboard draft">
         </div>
     </article>
-    <article>
-        <div>
+    <article class="format-g">
+        <div class="image-c">
             <img src="Pitchboard2.png" alt="Second Pitchboard draft">
         </div>
     </article>
-    <article>
-        <div>
+    <article class="format-g">
+        <div class="image-c">
             <img src="Pitchboard3.png" alt="Portfolio Wireframe">
         </div>
     </article>
-    <article>
-        <div>
+    <article class="format-g">
+        <div class="image-c">
             <img src="Pitchboard4.png" alt="Resume Wireframe">
         </div>
     </article>
