--- a/preproduction.html
+++ b/preproduction.html
@@ -18,25 +18,77 @@
             <a href="./index.html">Portfolio</a>
         </div>
     </section>
+<section id="blog">
+    <h1 class = "title-f">The Original Pitchboard</h1>
     <article class="format-g">
         <div class="image-c">
             <img src="Pitchboard1.png" alt="First Pitchboard draft">
         </div>
     </article>
+    <article class ="description-r">
+        <p class ="contact-e">
+            In the original pitchboard of Wapipely, it was intended to be a site where people who were 
+            looking for a job could submit their portfolios onto the site, after which the employers who 
+            were looking to hire people could filter through the skills and kinds of positions they need 
+            to be filled until they were able to easily find and reach out to new potential employees. It 
+            was going to be a competitor to sites such as LinkedIn. However, there were some issues with 
+            the original concept, such as not letting the users upload their resumes and not being very 
+            well formatted.
+        </p>
+    </article>
+    <h2 class = "title-f">The New Pitchboard</h2>
     <article class="format-g">
         <div class="image-c">
             <img src="Pitchboard2.png" alt="Second Pitchboard draft">
         </div>
     </article>
+    <article class ="description-r">
+        <p class ="contact-e">
+            In the New Pitchboard several things were changed from the original. The biggest change is 
+            that users are now also able to upload their resume as well as their portfolio in order to 
+            allow the different employers to see what skills they have as well as what companies they 
+            have worked for previously as well. Another change from the original pitchboard design is 
+            that there is some better design, such as the different colored backgrounds on the most important 
+            parts in order to draw the viewers eyes better. The last change was that Wapipely went from a 
+            site with multiple users to a site with a single user due to the lack of a server others could upload to.
+        </p>
+    </article>
+    <h3 class = "title-f">Portfolio Wireframe</h3>
     <article class="format-g">
         <div class="image-c">
             <img src="Pitchboard3.png" alt="Portfolio Wireframe">
         </div>
     </article>
+    <article class ="description-r">
+        <p class ="contact-e">
+            The first page of the site would be of the user's portfolio pieces that they 
+            have uploaded to the site. At the top of the page the site will have the title
+             of the current page the user is on, as well as a link to the other page on the 
+             site for ease of navigation for the user. Each picture on the site will have a 
+             caption under it giving a brief description of what it is. Beneath the pictures 
+             in between them will be a brief description of the game, what parts I created, 
+             and a link to the page of the game for the users to see. Finally, at the very bottom 
+             will be a Contact Me area, where the users will be able to see my email addresses or 
+             any other information that they can use to contact me directly. 
+        </p>
+    </article>
+    <h4 class = "title-f">Resume Wireframe</h4>
     <article class="format-g">
         <div class="image-c">
             <img src="Pitchboard4.png" alt="Resume Wireframe">
         </div>
     </article>
+    <article class ="description-r">
+        <p class ="contact-e">
+            The second page of the site will be for the users resume and skills. At the top of 
+            the page there is a link back to the Portfolio page, as well as the title of the page 
+            the user is currently on. Below them is a download link to a PDF of the resume the client 
+            has so that if the user wants a quick summary of their previous experience, it's readily available. 
+            After that the user will be able to see the Education of the client as well as some of the skills they
+            have mastered. The user will then be able to see a more in-depth description of what the client did at 
+            each of their previous companies. Lastly, there is the Contact Me area at the bottom of the page.
+        </p>
+    </article>
+</section>
 </body>
 </html>
