--- a/preproduction.html
+++ b/preproduction.html
@@ -19,13 +19,13 @@
         </div>
     </section>
 <section id="blog">
-    <h1 class = "title-f">The Original Pitchboard</h1>
+    <h1 class = "title-h">The Original Pitchboard</h1>
     <article class="format-g">
         <div class="image-c">
             <img src="Pitchboard1.png" alt="First Pitchboard draft">
         </div>
     </article>
-    <article class ="description-r">
+    <article class ="description-f">
         <p class ="contact-e">
             In the original pitchboard of Wapipely, it was intended to be a site where people who were 
             looking for a job could submit their portfolios onto the site, after which the employers who 
@@ -36,13 +36,13 @@
             well formatted.
         </p>
     </article>
-    <h2 class = "title-f">The New Pitchboard</h2>
+    <h2 class = "title-h">The New Pitchboard</h2>
     <article class="format-g">
         <div class="image-c">
             <img src="Pitchboard2.png" alt="Second Pitchboard draft">
         </div>
     </article>
-    <article class ="description-r">
+    <article class ="description-f">
         <p class ="contact-e">
             In the New Pitchboard several things were changed from the original. The biggest change is 
             that users are now also able to upload their resume as well as their portfolio in order to 
@@ -53,13 +53,13 @@
             site with multiple users to a site with a single user due to the lack of a server others could upload to.
         </p>
     </article>
-    <h3 class = "title-f">Portfolio Wireframe</h3>
+    <h3 class = "title-h">Portfolio Wireframe</h3>
     <article class="format-g">
         <div class="image-c">
             <img src="Pitchboard3.png" alt="Portfolio Wireframe">
         </div>
     </article>
-    <article class ="description-r">
+    <article class ="description-f">
         <p class ="contact-e">
             The first page of the site would be of the user's portfolio pieces that they 
             have uploaded to the site. At the top of the page the site will have the title
@@ -72,13 +72,13 @@
              any other information that they can use to contact me directly. 
         </p>
     </article>
-    <h4 class = "title-f">Resume Wireframe</h4>
+    <h4 class = "title-h">Resume Wireframe</h4>
     <article class="format-g">
         <div class="image-c">
             <img src="Pitchboard4.png" alt="Resume Wireframe">
         </div>
     </article>
-    <article class ="description-r">
+    <article class ="description-f">
         <p class ="contact-e">
             The second page of the site will be for the users resume and skills. At the top of 
             the page there is a link back to the Portfolio page, as well as the title of the page 
