--- a/preproduction.html
+++ b/preproduction.html
@@ -21,7 +21,7 @@
 <section id="blog">
     <h1 class = "title-h">The Original Pitchboard</h1>
     <article class="format-g">
-        <div class="image-c">
+        <div class="image-d">
             <img src="Pitchboard1.png" alt="First Pitchboard draft">
         </div>
     </article>
@@ -74,7 +74,7 @@
     </article>
     <h4 class = "title-h">Resume Wireframe</h4>
     <article class="format-g">
-        <div class="image-c">
+        <div class="image-d">
             <img src="Pitchboard4.png" alt="Resume Wireframe">
         </div>
     </article>
