--- a/preproduction.html
+++ b/preproduction.html
@@ -74,7 +74,7 @@
     </article>
     <h4 class = "title-h">Resume Wireframe</h4>
     <article class="format-g">
-        <div class="image-d">
+        <div class="image-e">
             <img src="Pitchboard4.png" alt="Resume Wireframe">
         </div>
     </article>
