--- a/resume.html
+++ b/resume.html
@@ -8,7 +8,7 @@
     <title>Previous Jobs and Internships</title>
 </head>
 <body>
-    <section class="top">
+    <div class="top">
         <header class="header">Resume</header>
             <p class="headera">
             Other Links
@@ -17,7 +17,7 @@
             <a href="./preproduction.html" class ="prea">Pre-Production Write Up</a>
             <a href="./index.html" class="portfolior">Portfolio</a>
         </div>
-    </section>
+    </div>
     <section id="blog">
         <h1 class = "title-f">Education</h1>
         <article class ="description-r">
