--- a/resume.html
+++ b/resume.html
@@ -20,11 +20,11 @@
     </div>
     <section id="blog">
         <h1 class = "title-f">Education</h1>
-        <article class ="description-r">
+        <div class ="description-r">
             <p class ="contact-e">
                 Currently studying at Michigan State University, majoring and minoring in Game Design and Interactivity.
             </p>
-        </article>
+        </div>
         <h2 class = "title-a">Skills</h2>
         <section class = "flexed-d">
             <article class="format-r">
