--- a/resume.html
+++ b/resume.html
@@ -26,7 +26,7 @@
             </p>
         </div>
         <h2 class = "title-a">Skills</h2>
-        <section class = "flexed-d">
+        <div class = "flexed-d">
             <article class="format-r">
                 <h2 class="header-r">Game Design Skills</h2>
                 <ul class="colorsize">
@@ -45,9 +45,9 @@
                     <li>Adobe Software</li>
                  </ul>
             </article>
-        </section>
+        </div>
         <h3 class = "title-b">Work Experience</h3>
-        <section class="flexed-c">
+        <div class="flexed-c">
             <article class="description-c">
                 <h4 class="title-e">Fuse.AR</h4>
                 <p class="contact-c">
@@ -75,13 +75,13 @@
                     the summers of 2019, 2020, and 2021.
                 </p>
             </article>
-            </section>
+        </div>
     </section>
-    <section class="bottom">
+    <div class="bottom">
         <header class="headera">Contact Me</header>
             <p class="headerb">
             connorcem415@gmail.com
             </p>
-    </section>
+        </div>
 </body>
 </html>
